# umi-mx-icons

./: CHANGELOG  CONTRIBUTING.md  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  umi-mvx-icons-theme.spec
debian/: changelog  control  copyright  install  postinst  postrm
production/: CHANGELOG  cursor.theme  index.theme  index_tmp.theme
production/cursors/: circle  cross  e-resize  forbidden  ibeam  link  move  plus  s-resize  size_all  split_h  split_v  top_left_arrow  watch  whats_this
src/: render-bitmaps.py
src/cursors/loginspinner/: Makefile
src/cursors/src/: cursor.theme
symlinks/: generate-symlinks.sh
symlinks/bitmaps/: apps.list  places.list
